2003-10-27  Pavel Roskin  <proski@gnu.org>

	* tree.c (tree_rmdir_cmd): Don't change to the root directory -
	it's not needed now.

	* win.c (check_movement_keys): Add support for Ctrl-PgDown,
	Ctrl-PgUp, Ctrl-Home and Ctrl-End.

2003-10-26  Pavel Roskin  <proski@gnu.org>

	* terms.c: Merge ...
	* win.c: ... here.
	* Makefile.am: Remove terms.c.

	* panel.h: Fix duplication between cpanel and current_panel in
	favor of current_panel.  Ditto opanel and other_panel.

	* main.c (get_current_panel): Remove.
	(get_other_panel): Move ...
	* layout.c: ... here.

	* info.h: Don't expose WInfo internals.

	* background.c (tell_parent): Eliminate.
	(background_attention): Use error code instead.
	* file.c (panel_operate): Exit with code 0, not 1.

	* wtools.c: Merge mc_message() and message() into one background
	safe function message().  Fix all callers.

	* i18n.h: Include into global.h.
	* Makefile.am: Remove i18n.h.

2003-10-25  Pavel Roskin  <proski@gnu.org>

	* background.c: Clean up includes.
	(do_background): Set current_dlg to NULL for the child process.
	* dialog.h (do_complete_refresh): Don't use we_are_background.
	* file.h: Remove dependency on background.h.
	* background.h: Define we_are_background.  Move mc_message() ...
	* wtools.h: ... here.
	* key.h: Don't define we_are_background.
	* slint.c (mc_refresh): Use current_dialog instead of
	we_are_background to fix compilation without WITH_BACKGROUND.

	* background.c (do_background): Use pipe() instead of less
	portable socketpair().  Close comm[0] in the child.

	* wtools.c (mc_message): Fix argument expansion.

	* background.c: Leave only code used when WITH_BACKGROUND is
	defined. The rest goes ...
	* wtools.c: ... here.

	* background.c: Remove mymsg.

	* util.c (msglen): Constify first argument.
	* wtools.c (query_dialog): Constify string argments.
	(create_message): New function, forked from message().
	(message): Return void.  Allocate memory dynamically.